...
            }
        }


        var accessibilityId: String {
            switch self {
            case .feeds: return "tab_feeds"
            case .canvas: return "tab_canvas"
            case .me: return "tab_me"
            }
        }

        var telemetryName: String {
            switch self {
            case .canvas: return "canvas"
...
